cmake_minimum_required(VERSION 3.19)
project(lwl)

set(CMAKE_CXX_STANDARD 14)

add_executable(lwl leetcode/26.删除排序数组中的重复项.cpp "leetcode/122.买卖股票的最佳时机II.cpp" leetcode/189.旋转数组.cpp leetcode/217.存在重复元素.cpp leetcode/136.只出现一次的数字.cpp "leetcode/401.二进制手表.cpp" "leetcode/58. 最后一个单词的长度.cpp" "剑指offer/38. 字符串的排列.cpp" "leetcode/344.反转字符串.cpp" "leetcode/7.整数反转.cpp" "leetcode/350.两个数组的交集II.cpp" "leetcode/349.两个数组的交集.cpp" "leetcode/237.删除链表中的节点.cpp" "leetcode/19.删除链表的倒数第 N 个结点.cpp" "leetcode/206.反转链表.cpp" "leetcode/104.二叉树的最大深度.cpp" "leetcode/559.N叉树的最大深度.cpp" "leetcode/108.将有序数组转换为二叉搜索树.cpp" "leetcode/121.买卖股票的最佳时机.cpp" leetcode/53.最大子序和.cpp)